--- a/index.html
+++ b/index.html
@@ -17,71 +17,69 @@
       <div class="profile__info">
         <div class="profile__name-container">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <button class="profile__edit-button"></button>
+          <button type="button" class="profile__edit-button"></button>
         </div>
         <p class="profile__description">Исследователь океана</p>
       </div>
-      <button class="profile__add-button"></button>
+      <button class="profile__add-button" type="button"></button>
     </section>
     <section class="places">
       <div class="places__card">
         <img src="./images/karach.png" alt="Карачаевск" class="places__card-image">
         <div class="places__card-description-container">
           <h2 class="places__card-discription">Карачаевск</h2>
-          <div class="places__heart-button"></div>
+          <button class="places__heart-button" type="button"></button>
         </div>
       </div>
       <div class="places__card">
         <img src="./images/elbrus.png" alt="Гора Эльбру" class="places__card-image">
         <div class="places__card-description-container">
           <h2 class="places__card-discription">Гора Эльбрус</h2>
-          <div class="places__heart-button"></div>
+          <button class="places__heart-button" type="button"></button>
         </div>
       </div>
       <div class="places__card">
         <img src="./images/domb.png" alt="Домбай" class="places__card-image">
         <div class="places__card-description-container">
           <h2 class="places__card-discription">Домбай</h2>
-          <div class="places__heart-button"></div>
+          <button class="places__heart-button" type="button"></button>
         </div>
       </div>
       <div class="places__card">
         <img src="./images/elbrus.png" alt="Гора Эльбрус" class="places__card-image">
         <div class="places__card-description-container">
           <h2 class="places__card-discription">Гора Эльбрус</h2>
-          <div class="places__heart-button"></div>
+          <button class="places__heart-button" type="button"></button>
         </div>
       </div>
       <div class="places__card">
         <img src="./images/domb.png" alt="Домбай" class="places__card-image">
         <div class="places__card-description-container">
           <h2 class="places__card-discription">Домбай</h2>
-          <div class="places__heart-button"></div>
+          <button class="places__heart-button" type="button"></button>
         </div>
       </div>
       <div class="places__card">
         <img src="./images/karach.png" alt="Карачаевск" class="places__card-image">
         <div class="places__card-description-container">
           <h2 class="places__card-discription">Карачаево-Черкесия</h2>
-          <div class="places__heart-button"></div>
+          <button class="places__heart-button" type="button"></button>
         </div>
       </div>
     </section>
-    <footer class="footer">
-      <h2 class="footer__copyright">&#169; 2020 Mesto Russia</h2>
-    </footer>
-    <div class="popup">
-
-      <form class="popup__container">
-        <h3 class="popup__title">Редактировать профиль</h3>
-        <input type="text" placeholder="Жак-Ив Кусто" class="popup__input-name">
-        <input type="text" placeholder="Исследователь океана" class="popup__input-work">
-        <button class="popup__submit">Сохранить</button>
-        <button type="reset" class="popup__close"></button>
-      </form>
-
-    </div>
   </main>
+  <footer class="footer">
+    <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
+  </footer>
+  <div class="popup">
+    <form class="popup__container" name="popup">
+      <h3 class="popup__title">Редактировать профиль</h3>
+      <input type="text" placeholder="Жак-Ив Кусто" class="popup__input-name" name="input-name">
+      <input type="text" placeholder="Исследователь океана" class="popup__input-work" name="input-work">
+      <button type="submit" class="popup__submit">Сохранить</button>
+      <button type="reset" class="popup__close"></button>
+    </form>
+  </div>
+  <script src="./scripts/index.js"></script>
 </body>
-<script src="./scripts/index.js"></script>
 </html>
