--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
     <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
   </footer>
   <div class="popup">
-    <form class="popup__container" name="popup">
+    <form class="popup__container" name="person-data">
       <h3 class="popup__title">Редактировать профиль</h3>
-      <input type="text" placeholder="Жак-Ив Кусто" class="popup__input-name" name="input-name">
-      <input type="text" placeholder="Исследователь океана" class="popup__input-work" name="input-work">
+      <input type="text" placeholder="Жак-Ив Кусто" class="popup__input" name="input-name">
+      <input type="text" placeholder="Исследователь океана" class="popup__input" name="input-work">
       <button type="submit" class="popup__submit">Сохранить</button>
       <button type="reset" class="popup__close"></button>
     </form>
