Дописаны модификаторы в попапе

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
   <div class="popup">
     <form class="popup__container" name="person-data">
       <h3 class="popup__title">Редактировать профиль</h3>
-      <input type="text" placeholder="Жак-Ив Кусто" class="popup__input" name="input-name">
-      <input type="text" placeholder="Исследователь океана" class="popup__input" name="input-work">
+      <input type="text" placeholder="Жак-Ив Кусто" class="popup__input popup__input_name" name="input-name">
+      <input type="text" placeholder="Исследователь океана" class="popup__input popup__input_work" name="input-work">
       <button type="submit" class="popup__submit">Сохранить</button>
       <button type="reset" class="popup__close"></button>
     </form>
